[gd_scene load_steps=18 format=3 uid="uid://oh55ahc7ybdo"]

[ext_resource type="Script" path="res://Title Scene/title_scene.gd" id="1_i8u5x"]
[ext_resource type="Texture2D" uid="uid://cvjttsuwq6t2r" path="res://TinyBard art/Title Screen Layers/Background.png" id="1_x1ggq"]
[ext_resource type="Texture2D" uid="uid://5am3ocqs4xb2" path="res://TinyBard art/Title Screen Layers/Penguin.png" id="2_edmhb"]
[ext_resource type="Texture2D" uid="uid://b32ehyvm3libi" path="res://TinyBard art/Title Screen Layers/RL1.png" id="3_ei1nb"]
[ext_resource type="Texture2D" uid="uid://b0hyex4qm6b8g" path="res://TinyBard art/Title Screen Layers/YL1.png" id="4_gxco4"]
[ext_resource type="Texture2D" uid="uid://5k361mi4xsva" path="res://TinyBard art/Title Screen Layers/YL2.png" id="5_qyrwu"]
[ext_resource type="Texture2D" uid="uid://cya5k1wh78ir8" path="res://TinyBard art/Title Screen Layers/Disco Ball.png" id="6_hxkha"]
[ext_resource type="Texture2D" uid="uid://ck15qrvdjhk8x" path="res://TinyBard art/Title Screen Layers/GL1.png" id="7_udsqt"]
[ext_resource type="Texture2D" uid="uid://wmgmwi50li5w" path="res://TinyBard art/Title Screen Layers/GL2.png" id="8_3gyt6"]
[ext_resource type="Texture2D" uid="uid://cspmc6w8a3tnt" path="res://TinyBard art/Title Screen Layers/Logo.png" id="9_q1eup"]
[ext_resource type="Texture2D" uid="uid://bd4seax74tvq7" path="res://TinyBard art/Title Screen Layers/Play Unclicked.png" id="11_os2pw"]
[ext_resource type="Texture2D" uid="uid://cwbqdc7mbns6y" path="res://TinyBard art/Title Screen Layers/Play Clicked.png" id="12_7cb5o"]
[ext_resource type="AudioStream" uid="uid://tjcc8jq1vju8" path="res://Title Scene/click-buttons-ui-menu-sounds-effects-button-2-203594.mp3" id="13_s8qcp"]
[ext_resource type="AudioStream" uid="uid://dm1l3p1a6hdrt" path="res://Title Scene/click-buttons-ui-menu-sounds-effects-button-8-205394.mp3" id="14_shyny"]

[sub_resource type="Animation" id="Animation_ffg04"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Penguin:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1101, 580)]
}

[sub_resource type="Animation" id="Animation_tyi4o"]
resource_name = "Title_screen_anim"
length = 7.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4, 2.9, 5, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0261799, 0.0, -0.0261799, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Penguin:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.8, 3.6, 5.1, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1101, 580), Vector2(1079, 580), Vector2(1101, 580), Vector2(1125, 580), Vector2(1101, 580)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ldisc"]
_data = {
"RESET": SubResource("Animation_ffg04"),
"Title_screen_anim": SubResource("Animation_tyi4o")
}

[node name="TitleScene" type="Node2D"]
script = ExtResource("1_i8u5x")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(959, 540)
scale = Vector2(1.25, 1.25)
texture = ExtResource("1_x1ggq")

[node name="Rl1" type="Sprite2D" parent="."]
position = Vector2(903, 535)
texture = ExtResource("3_ei1nb")

[node name="Yl1" type="Sprite2D" parent="."]
position = Vector2(1374, 516)
texture = ExtResource("4_gxco4")

[node name="Yl2" type="Sprite2D" parent="."]
position = Vector2(1509, 520)
texture = ExtResource("5_qyrwu")

[node name="DiscoBall" type="Sprite2D" parent="."]
position = Vector2(1130, 529)
texture = ExtResource("6_hxkha")

[node name="Gl1" type="Sprite2D" parent="."]
position = Vector2(608, 520)
texture = ExtResource("7_udsqt")

[node name="Gl2" type="Sprite2D" parent="."]
position = Vector2(684, 529)
texture = ExtResource("8_3gyt6")

[node name="Penguin" type="Sprite2D" parent="."]
position = Vector2(1101, 580)
texture = ExtResource("2_edmhb")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(1073, 783)
texture = ExtResource("9_q1eup")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ldisc")
}
autoplay = "Title_screen_anim"

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 610.0
offset_top = 722.0
offset_right = 1057.0
offset_bottom = 863.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("11_os2pw")
texture_pressed = ExtResource("12_7cb5o")
texture_hover = ExtResource("12_7cb5o")

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_s8qcp")
volume_db = 10.0

[node name="PlayGameSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_shyny")

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
